[gd_scene load_steps=8 format=3 uid="uid://1rjd0fftp1fs"]

[ext_resource type="PackedScene" uid="uid://h1jrfc40y2b8" path="res://Gameplay Scenes/testing.tscn" id="1_qeicg"]
[ext_resource type="Script" path="res://Gameplay Scenes/Tutorial.gd" id="2_8ywqb"]
[ext_resource type="Script" path="res://Gameplay Scenes/TutorialMainGrid.gd" id="2_hag14"]
[ext_resource type="Script" path="res://Gameplay Scenes/TutorialSpawingAlgorithm.gd" id="2_qp8xn"]
[ext_resource type="Script" path="res://Gameplay Scenes/TutorialText.gd" id="5_4g20u"]
[ext_resource type="Texture2D" uid="uid://dy6lqr2se6l27" path="res://Assets/ExportedIcons/Icon_ArrowUp.png" id="6_rb6ko"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kk0u1"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)

[node name="Tutorial" instance=ExtResource("1_qeicg")]
script = ExtResource("2_8ywqb")

[node name="MainGrid" parent="." index="0"]
script = ExtResource("2_hag14")

[node name="PassiveIncomeTimer" parent="MainGrid" index="2"]
autostart = false

[node name="SpawingAlgorithm" parent="." index="8"]
script = ExtResource("2_qp8xn")

[node name="TutorialText" type="CanvasLayer" parent="." index="11"]
follow_viewport_enabled = true
script = ExtResource("5_4g20u")

[node name="ResourceArrow" type="TextureRect" parent="TutorialText" index="0"]
visible = false
offset_left = -151.0
offset_top = 11.0
offset_right = -17.0
offset_bottom = 162.0
texture = ExtResource("6_rb6ko")
expand_mode = 1

[node name="TowerArrow" type="TextureRect" parent="TutorialText" index="1"]
visible = false
offset_left = 100.0
offset_top = 13.0
offset_right = 278.0
offset_bottom = 189.0
texture = ExtResource("6_rb6ko")
expand_mode = 1

[node name="GeneratorArrow" type="TextureRect" parent="TutorialText" index="2"]
visible = false
offset_left = 112.0
offset_top = 2.0
offset_right = 210.0
offset_bottom = 124.0
texture = ExtResource("6_rb6ko")
expand_mode = 1

[node name="TextboxContainer" type="MarginContainer" parent="TutorialText" index="3"]
offset_left = 27.0
offset_top = 366.0
offset_right = 332.0
offset_bottom = 521.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = -67
theme_override_constants/margin_right = -16
theme_override_constants/margin_bottom = -16

[node name="Panel" type="Panel" parent="TutorialText/TextboxContainer" index="0"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kk0u1")

[node name="MarginContainer" type="MarginContainer" parent="TutorialText/TextboxContainer" index="1"]
layout_mode = 2
theme_override_constants/margin_left = 11
theme_override_constants/margin_top = 11
theme_override_constants/margin_right = 11
theme_override_constants/margin_bottom = 11

[node name="Panel" type="Panel" parent="TutorialText/TextboxContainer/MarginContainer" index="0"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TutorialText/TextboxContainer/MarginContainer" index="1"]
layout_mode = 2

[node name="Dialogue" type="Label" parent="TutorialText/TextboxContainer/MarginContainer/HBoxContainer" index="0"]
layout_mode = 2
text = "Test"
